# downforacrossbot

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  deploy-commands.js  deploy-commands.ts  eslint.config.mjs  index.js  index.ts  main.py  package-lock.json  package.json  puzzle_utils.py  pyproject.toml  settings.py  tsconfig.json  webserver.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  docker.yml
commands/: puzzle.js  puzzle.ts  reload.js  start.js  start.ts
constants/: embed-colors.ts  publishers.ts
events/: interactionCreate.js  interactionCreate.ts  messageReactionAdd.js  messageReactionAdd.ts  ready.ts
src/: api_utils.py  puzzle_utils.py  webserver.py
types/: command.ts  config.ts  discord.d.ts  events.ts
utilities/: api-utils.js  api-utils.ts  buttons.js  buttons.ts  config.ts  load-commands.ts  puzzle-utils.js  puzzle-utils.ts
