[project]
name = "downforacrossbot"
version = "0.1.1"
description = "Discord bot that sends downforacross crossword puzzle links"
requires-python = ">=3.14"
dependencies = [
    "discord.py",
    "python-dotenv",
    "requests",
    "Flask",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]


